--- a/challenge/slides/img0.html
+++ b/challenge/slides/img0.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Folie 1</title>
+  <title>Corrently-Charge</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-Erste Seite Zurück <a href="img1.html">Weiter</a> <a href="img16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="text0.html">Text</a></center><br>
+<img src="first-inactive.png" border=0 alt="Erste Seite"> <img src="left-inactive.png" border=0 alt="Zurück"> <a href="img1.html"><img src="right.png" border=0 alt="Weiter"></a> <a href="img18.html"><img src="last.png" border=0 alt="Letzte Seite"></a> <a href="BusinessCanvas_CorrentlyCharge.htm"><img src="home.png" border=0 alt="Übersicht"></a> <a href="text0.html"><img src="text.png" border=0 alt="Text"></a></center><br>
 <center><img src="img0.png" alt=""></center>
 </body>
 </html>
