--- a/challenge/slides/text0.html
+++ b/challenge/slides/text0.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Folie 1</title>
+  <title>Corrently-Charge</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-Erste Seite Zurück <a href="text1.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img0.html">Bild</a></center><br>
+Erste Seite Zurück <a href="text1.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img0.html">Bild</a></center><br>
 <h1>Corrently-Charge</h1>
 <h2>Business Canvas Team STROMDAO</h2>
 <h2>IAA Mobilitython 2022</h2>
