--- a/challenge/slides/text11.html
+++ b/challenge/slides/text11.html
@@ -3,13 +3,13 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Cost structure (for the next 100 days to MVP)</title>
+  <title>Cost structure MVP</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text10.html">Zurück</a> <a href="text12.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img11.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text10.html">Zurück</a> <a href="text12.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img11.html">Bild</a></center><br>
 <h1>Cost structure MVP</h1>
-<h2><font color="#595959">If we get 107.600€, it is possible for team STROMDAO to bring correngly-charge to an MVP running at the lighthouse customers in production gaining first revenue. </font></h2>
+<h2><font color="#595959">If we get 128,300€, it is possible for team STROMDAO to bring corrently-charge to an MVP running at the lighthouse customers in production gaining first revenue. </font></h2>
 <table>
   <tr>
     <td>
@@ -24,15 +24,15 @@
 <p><b>People</b></p>
     </td>
     <td>
-<p><b>82.600€</b></p>
+<p><b>93,300€</b></p>
     </td>
   </tr>
   <tr>
     <td>
-<p>- Backend (20d)</p>
+<p>- Backend (30d)</p>
     </td>
     <td>
-<p>14.000€</p>
+<p>21,000€</p>
     </td>
   </tr>
   <tr>
@@ -40,7 +40,7 @@
 <p>- Connectivity (15d)</p>
     </td>
     <td>
-<p>10.500€</p>
+<p>10,500€</p>
     </td>
   </tr>
   <tr>
@@ -48,23 +48,23 @@
 <p>- UX/UI (15d)</p>
     </td>
     <td>
-<p>10.500€</p>
+<p>10,500€</p>
     </td>
   </tr>
   <tr>
     <td>
-<p>- Legal (5d)</p>
+<p>- Legal (10d)</p>
     </td>
     <td>
-<p>5.000€</p>
+<p>10,000€</p>
     </td>
   </tr>
   <tr>
     <td>
-<p>- IT-Ops (10d)</p>
+<p>- IT-Ops (20d)</p>
     </td>
     <td>
-<p>7.000€</p>
+<p>14,000€</p>
     </td>
   </tr>
   <tr>
@@ -72,15 +72,15 @@
 <p>- Key Account  (5d)</p>
     </td>
     <td>
-<p>5.000€</p>
+<p>5,000€</p>
     </td>
   </tr>
   <tr>
     <td>
-<p>- Lighthouse (10d)</p>
+<p>- Lighthouse (12d)</p>
     </td>
     <td>
-<p>10.000€</p>
+<p>12,000€</p>
     </td>
   </tr>
   <tr>
@@ -88,7 +88,7 @@
 <p>- Project (12d)</p>
     </td>
     <td>
-<p>10.300€</p>
+<p>10,300€</p>
     </td>
   </tr>
   <tr>
@@ -96,7 +96,7 @@
 <p><b>Organization / Technology</b></p>
     </td>
     <td>
-<p><b>25.000€</b></p>
+<p><b>35,000€</b></p>
     </td>
   </tr>
   <tr>
@@ -104,7 +104,7 @@
 <p>- Cloud / Infrastructure</p>
     </td>
     <td>
-<p>10.000€</p>
+<p>10,000€</p>
     </td>
   </tr>
   <tr>
@@ -112,15 +112,15 @@
 <p>- Marketing / PR / Communication</p>
     </td>
     <td>
-<p>10.000€</p>
+<p>10,000€</p>
     </td>
   </tr>
   <tr>
     <td>
-<p>- Other (travel, rental, capex, ...)</p>
+<p>- Other (travel, rental, capex, license ...)</p>
     </td>
     <td>
-<p>5.000€</p>
+<p>15,000€</p>
     </td>
   </tr>
   <tr>
@@ -128,7 +128,7 @@
 <p><b>Total MVP</b></p>
     </td>
     <td>
-<p><b>107.600€</b></p>
+<p><b>128.300€</b></p>
     </td>
   </tr>
 </table>
