--- a/challenge/slides/text12.html
+++ b/challenge/slides/text12.html
@@ -7,7 +7,7 @@
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text11.html">Zurück</a> <a href="text13.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img12.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text11.html">Zurück</a> <a href="text13.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img12.html">Bild</a></center><br>
 <h1>Timeline (for the next 100 days to MVP)</h1>
 <table>
   <tr>
@@ -47,7 +47,7 @@
   </tr>
   <tr>
     <td>
-<p>- Backend (20d)</p>
+<p>- Backend (30d)</p>
     </td>
     <td>
     </td>
@@ -122,7 +122,7 @@
   </tr>
   <tr>
     <td>
-<p>- Legal (5d)</p>
+<p>- Legal (10d)</p>
     </td>
     <td>
     </td>
@@ -247,14 +247,14 @@
   </tr>
 </table>
 <p><font color="#595959">Organized in 10 sprints with 10 days.</font></p>
-<p><b><font color="#595959">Milestone 1 (POC)</b> 
-First Charging 
-at one lighthouse </font></p>
+<p><b><font color="#595959">Milestone 1 (POC)</b> </font>
+<font color="#595959">First Charging </font>
+<font color="#595959">at one lighthouse </font></p>
 <p><font color="#595959">project.</font></p>
 <p><b><font color="#595959">Milestone 0</b> </font></p>
 <p><font color="#595959">Fine-Tunes </font></p>
-<p><font color="#595959">prototype </font></p>
-<p><b><font color="#595959">Milestone 2 (MVP)</b> 
-Transition to Go-To-Market phase </font></p>
+<p><font color="#595959">Prototype. Sign LOIs </font></p>
+<p><b><font color="#595959">Milestone 2 (MVP)</b> </font>
+<font color="#595959">Transition to Go-To-Market phase </font></p>
 </body>
 </html>
