--- a/challenge/slides/text13.html
+++ b/challenge/slides/text13.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Revenue Streams (also post MVP)</title>
+  <title>Revenue Stream / Pricing</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text12.html">Zurück</a> <a href="text14.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img13.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text12.html">Zurück</a> <a href="text14.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img13.html">Bild</a></center><br>
 <h1>Revenue Stream / Pricing</h1>
 <ul>
 <li><font color="#595959">One-Time: Setup/Integration costs  (not for Lighthouse/MVP projects) </font></li>
@@ -48,7 +48,6 @@
 <ul>
 <li><font color="#595959">Might replace exising subsription costs of EMT/Networks</font></li>
 <li><font color="#595959">Might disrupt existing payment/billing fees</font></li>
-<li><font color="#595959"></font></li>
 </ul>
 </body>
 </html>
