--- a/challenge/slides/text16.html
+++ b/challenge/slides/text16.html
@@ -7,20 +7,9 @@
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text15.html">Zurück</a> Weiter Letzte Seite <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img16.html">Bild</a></center><br>
-<h1><font color="#424242">Works at a medium-sized company who offers their employees EV charging on-site</font></h1>
-<ul>
-<li><font color="#424242">Works at a medium-sized company who offers their employees EV charging on-site</font></li>
-<li><font color="#424242">Goal that at the end of the working day (8 hrs) EV is at least 80% charged</font></li>
-<li><font color="#424242">Benefits from most phyically available green energy in the grid  good conscience</font></li>
-<li><font color="#424242">Benefits from low charging price as this price is lower than the average electricity tariff</font></li>
-</ul>
-<ul>
-<li><font color="#424242">Company has solar panels installed on company site</font></li>
-<li><font color="#424242">Becomes a more attractive employer in times of skill shortage with offering reasonable EV charging tariffs</font></li>
-<li><font color="#424242">Higher revenue through directly selling EV electricity to employees instead of feed-in compensation</font></li>
-</ul>
-<p><font color="#424242">Most optimised load profile and least outputted carbon emissions EV charging possible</font></p>
-<p>Personas</p>
+<a href="text0.html">Erste Seite</a> <a href="text15.html">Zurück</a> <a href="text17.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img16.html">Bild</a></center><br>
+<h1>Market Analysis </h1>
+<p>&gt;20.000/yr (DE) </p>
+<p>&lt;10.000/yr (DE) </p>
 </body>
 </html>
