--- a/challenge/slides/text3.html
+++ b/challenge/slides/text3.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Value propositions of your prototype</title>
+  <title>Value propositions of corrently-charge</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text2.html">Zurück</a> <a href="text4.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img3.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text2.html">Zurück</a> <a href="text4.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img3.html">Bild</a></center><br>
 <h1>Value propositions of corrently-charge</h1>
 <h2><font color="#595959">Prototype delivers value </font></h2>
 <ul>
