--- a/challenge/slides/text4.html
+++ b/challenge/slides/text4.html
@@ -3,12 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Key partners for Minimum Viable Product 
-(MVP in 100 days)</title>
+  <title>Key partners for Minimum Viable Product  </title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text3.html">Zurück</a> <a href="text5.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img4.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text3.html">Zurück</a> <a href="text5.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img4.html">Bild</a></center><br>
 <h1>Key partners for Minimum Viable Product  </h1>
 <h2><font color="#595959">Key partners today</font></h2>
 <ul>
@@ -36,13 +35,11 @@
 <li><font color="#595959">Interoparability testing </font></li>
 <li><font color="#595959">Existing CX knowledge</font></li>
 <li><font color="#595959">Regulatory Compliance </font></li>
-<li><font color="#595959"></font></li>
 <p><font color="#595959">Key activities performed by partners</font></p>
 <li><font color="#595959">Access to existing Charging APPs</font></li>
 <li><font color="#595959">Access to billing</font></li>
 <li><font color="#595959">Access to Energy Management</font></li>
 <li><font color="#595959">UX Development</font></li>
-<p><font color="#595959"></font></p>
 </ul>
 </ul>
 </ul>
