--- a/challenge/slides/text7.html
+++ b/challenge/slides/text7.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Customer relationships </title>
+  <title>Customer Relationships </title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text6.html">Zurück</a> <a href="text8.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img7.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text6.html">Zurück</a> <a href="text8.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img7.html">Bild</a></center><br>
 <h1>Customer Relationships </h1>
 <table>
   <tr>
