--- a/challenge/slides/text8.html
+++ b/challenge/slides/text8.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Customer segments</title>
+  <title>Customer Segments / Value Proposition</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text7.html">Zurück</a> <a href="text9.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img8.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text7.html">Zurück</a> <a href="text9.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img8.html">Bild</a></center><br>
 <h1>Customer Segments / Value Proposition</h1>
 <p><font color="#595959">Given: 8 hours of parking and required 60% SoC target at the end.</font></p>
 <p><font color="#595959">Driver </font></p>
