--- a/challenge/slides/text9.html
+++ b/challenge/slides/text9.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Channels</title>
+  <title>Communication Channels – Strategy MVP/POC </title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text8.html">Zurück</a> <a href="text10.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img9.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text8.html">Zurück</a> <a href="text10.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img9.html">Bild</a></center><br>
 <h1>Communication Channels – Strategy MVP/POC </h1>
 <ul>
 <li><font color="#595959">Reaching out to CPOs using Mock-Up UIs/toolkits in Appstores driving awareness of corrently-charge. </font></li>
