--- a/challenge/slides/img9.html
+++ b/challenge/slides/img9.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Channels</title>
+  <title>Communication Channels – Strategy MVP/POC </title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="img0.html">Erste Seite</a> <a href="img8.html">Zurück</a> <a href="img10.html">Weiter</a> <a href="img16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="text9.html">Text</a></center><br>
+<a href="img0.html"><img src="first.png" border=0 alt="Erste Seite"></a> <a href="img8.html"><img src="left.png" border=0 alt="Zurück"></a> <a href="img10.html"><img src="right.png" border=0 alt="Weiter"></a> <a href="img18.html"><img src="last.png" border=0 alt="Letzte Seite"></a> <a href="BusinessCanvas_CorrentlyCharge.htm"><img src="home.png" border=0 alt="Übersicht"></a> <a href="text9.html"><img src="text.png" border=0 alt="Text"></a></center><br>
 <center><img src="img9.png" alt=""></center>
 </body>
 </html>
