--- a/challenge/slides/text1.html
+++ b/challenge/slides/text1.html
@@ -3,13 +3,13 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>What is your idea about?</title>
+  <title>What is our idea about?</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text0.html">Zurück</a> <a href="text2.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img1.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text0.html">Zurück</a> <a href="text2.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img1.html">Bild</a></center><br>
 <h1>What is our idea about?</h1>
-<h2>Corrently Charge allows ChargePointOperators to offer ad-hoc tariffs for drivers, taking their charging requirements into account while optimizing the usage of local power generation.</h2>
+<h2>Corrently Charge allows ChargePointOperators to offer ad-hoc tariffs for drivers, taking drivers charging requirements into account while optimizing the usage of local power generation.</h2>
 <h2>Corrently Charge is a tariff builder focused on using available information to the actors in a charging event to optimize overall marginal return. </h2>
 <h2>The builder optimizes based on local forecast, time/duration of parking, GHG emission, and grid mains electricity costs.</h2>
 <p>Local generation forecast</p>
