--- a/challenge/slides/text10.html
+++ b/challenge/slides/text10.html
@@ -3,11 +3,11 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Folie 12</title>
+  <title>Communication Channels – GoToMarket </title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text9.html">Zurück</a> <a href="text11.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img10.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text9.html">Zurück</a> <a href="text11.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img10.html">Bild</a></center><br>
 <h1>Communication Channels – GoToMarket </h1>
 <ul>
 <li><font color="#595959">Solution Launch Campaign:</font></li>
