--- a/challenge/slides/text5.html
+++ b/challenge/slides/text5.html
@@ -3,24 +3,23 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Key resources</title>
+  <title>Key Resources</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text4.html">Zurück</a> <a href="text6.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img5.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text4.html">Zurück</a> <a href="text6.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img5.html">Bild</a></center><br>
 <h1>Key Resources</h1>
 <h2><font color="#595959">Key resources required for value propositions for an <u><b>MVP within 100 days</b></u></font></h2>
 <ul>
 <ul>
-<li><font color="#595959">Developer Backend (20 days)</font></li>
+<li><font color="#595959">Developer Backend (30 days)</font></li>
 <li><font color="#595959">Developer Connectivity/Interoparability (15 days)</font></li>
 <li><font color="#595959">Developer Frontend UI/UX (15 days)</font></li>
-<li><font color="#595959">Legal/Compliance advisory (5 days)</font></li>
+<li><font color="#595959">Legal/Compliance advisory (10 days)</font></li>
 <li><font color="#595959">IT-Ops / Cloud-Ops (10 days)</font></li>
 <li><font color="#595959">Key accounts / partners Interviews (5 days)</font></li>
 <li><font color="#595959">Lighthouse project success management (10 days) </font></li>
 <li><font color="#595959">Project Management / Sprint planning (12 days)</font></li>
-<li><font color="#595959"></font></li>
 </ul>
 </ul>
 <p><font color="#595959">Missing Data</font></p>
