--- a/challenge/slides/text6.html
+++ b/challenge/slides/text6.html
@@ -3,14 +3,14 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Key activities</title>
+  <title>Key Activities</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
 <center>
-<a href="text0.html">Erste Seite</a> <a href="text5.html">Zurück</a> <a href="text7.html">Weiter</a> <a href="text16.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img6.html">Bild</a></center><br>
+<a href="text0.html">Erste Seite</a> <a href="text5.html">Zurück</a> <a href="text7.html">Weiter</a> <a href="text18.html">Letzte Seite</a> <a href="BusinessCanvas_CorrentlyCharge.htm">Übersicht</a> <a href="img6.html">Bild</a></center><br>
 <h1>Key Activities</h1>
-<h2><b><font color="#595959">Distribution </b>
-Retail Customers (Apps), Multiplicators (Social-Media/PR), DSOs (Word-Of-Mouth), Communtiy Managers (Trade shows, replicators) </font></h2>
+<h2><b><font color="#595959">Distribution </b></font>
+<font color="#595959">Retail Customers (Apps), Multiplicators (Social-Media/PR), DSOs (Word-Of-Mouth), Communtiy Managers (Trade shows, replicators) </font></h2>
 <table>
   <tr>
     <td>
@@ -68,11 +68,9 @@ Retail Customers (Apps), Multiplicators (Social-Media/PR), DSOs (Word-Of-Mouth),
     </td>
   </tr>
 </table>
-<p><font color="#595959"></font></p>
-<p><b><font color="#595959">Customer relationships</b>
-B2B, B2B2C</font></p>
-<p><b><font color="#595959">Revenue streams <u>at MVP</u> phase</b>
-Licensed usage – see revenue streams</font></p>
-<p><font color="#595959"></font></p>
+<p><b><font color="#595959">Customer relationships</b></font>
+<font color="#595959">B2B, B2B2C</font></p>
+<p><b><font color="#595959">Revenue streams <u>at MVP</u> phase</b></font>
+<font color="#595959">Licensed usage – see revenue streams</font></p>
 </body>
 </html>
